Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,13 @@ a{
         background-size: cover;
        background-size:100%; */
 
-       background-image: url('images/trees_nature_background.jpg') no-repeat center center;
-       -webkit-background-size: cover;
-       -moz-background-size: cover;
-       -o-background-size: cover;
+       width: 100%;
+       height: 100%;
+       position: fixed;
+       z-index: -1;
+       background-image: url('images/trees_nature_background.jpg');
        background-size: cover;
-
+       background-position: 85% 50%;
+       background-repeat: no-repeat;
     }
 }
